--- a/frontend/src/Components/SellerDashboard/SellerSidebar/SellerSidebar.module.scss
+++ b/frontend/src/Components/SellerDashboard/SellerSidebar/SellerSidebar.module.scss
@@ -1,5 +1,7 @@
 .sidebar {
-  width: 260px;
+  // width: 250px;
+  max-width: 250px;
+  min-width: 250px;
   background-color: var(--white);
   border-right: 1px solid var(--very-light-gray);
   padding: 20px 0;
