--- a/frontend/src/Components/ProductDetailsPage/ProductDetails/ProductFirstInfos/ProductFirstInfos.module.scss
+++ b/frontend/src/Components/ProductDetailsPage/ProductDetails/ProductFirstInfos/ProductFirstInfos.module.scss
@@ -62,3 +62,21 @@
     max-width: 800px;
   }
 }
+
+.productInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.productInfo .price {
+  color: var(--dark-tomato);
+  font-weight: 500;
+}
+
+.productInfo .price .afterDiscount {
+  // margin-inline-start: 16px;
+  margin-left: 16px;
+  color: var(--primary);
+  font-weight: 500;
+}
