--- a/frontend/src/Components/Chat/ChatWindow/ChatWindow.module.scss
+++ b/frontend/src/Components/Chat/ChatWindow/ChatWindow.module.scss
@@ -91,3 +91,22 @@
     cursor: pointer;
   }
 }
+
+.placeholder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+  background-color: var(--skeleton-color1);
+  color: var(--dark-gray);
+  padding: 20px;
+
+  h3 {
+    margin-top: 20px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    max-width: 300px;
+  }
+}
