--- a/frontend/src/Components/Shared/MidComponents/ProductsSlider/SliderButtons/SliderButtons.module.scss
+++ b/frontend/src/Components/Shared/MidComponents/ProductsSlider/SliderButtons/SliderButtons.module.scss
@@ -27,6 +27,9 @@
     outline: 2px dashed var(--orange-degree2);
     outline-offset: 2px;
   }
+  &:disabled {
+    opacity: .3;
+  }
 }
 
 .sliderButtons>button:active>svg {
